Import of MJONDET/WebService-Eulerian-Analytics-0.5 from CPAN.
gitpan-cpan-distribution: WebService-Eulerian-Analytics
gitpan-cpan-version:      0.5
gitpan-cpan-path:         MJONDET/WebService-Eulerian-Analytics-0.5.tar.gz
gitpan-cpan-author:       MJONDET
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -5,7 +5,11 @@ TODO
   - Website/TPPublisher : add / modify publishers
   - Website/TPMedia : add / modify medias
 
-v0.4
+v0.5 Tue Sep 30 02:45:57 CEST 2008
+  - support for Website/TPOpedataCick : getLogByTPMediaName
+  - support for Website/TPOpe : getById / getByName / search / getURL
+
+v0.4	Sun Sep  7 18:47:20 CEST 2008 (first public release)
   - support for Website/TPOpe methods : getById / getByName / search
   - support for Website/TPPublisher methods : getById / getByName / search
   - support for Website/TPMedia methods : getById / getByName / search
