--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module WebService::Eulerian::Analytics
 
+v0.6.1	Thu Oct 15 20:03:05 CEST 2009
+  - support for Website/TPOpedataClick : getLogByOpeName
+  - added without_channel option for Website/TPOpedataClick : getLogByTPMediaName / getLogByTPOpeName
+
 v0.6	Thu Jul  9 12:32:56 CEST 2009
   - support for Website/Order : cancel / valid # for automatic validation and 
   cancelation of order references
